syntax = "proto3";
package configpb;

message Config{
    ConsensusConfig consensus_config = 1;
    NodeConfig      node_config = 2;
}

message ConsensusConfig{
    string miner_address = 1;
    string private_key = 2;
}

message NodeConfig{
    uint32 port = 1;
    repeated string seed = 2;
    string db_path = 3;
    uint32 rpc_port = 4;
    string key = 5;
    uint32 tx_pool_limit = 6;
    uint32 blk_size_limit = 7;
    string genesis_path = 9;
    int64 metrics_polling_interval = 12; // seconds
    int64 metrics_interval = 13; // seconds
}

message DynastyConfig{
    repeated string producers = 1;
    uint32 max_producers = 2;
}

message CliConfig{
    uint32 port = 1;
    string password = 2;
}
